# gauntlex

./: .combatpair.yml  .env.example  .gauntlex.yml  .gitignore  AGENTS.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING-PLAYBOOKS.md  CONTRIBUTING.md  DEMO.md  DISTRIBUTION.md  Dockerfile  ENTERPRISE_ROADMAP.md  LICENSE  MARKETING.md  README.md  RELEASE.md  SECURITY.md  docker-compose.yml  llms.txt  pyproject.toml  server.json
.claude/: settings.json
.claude-plugin/: marketplace.json  plugin.json
.github/workflows/: combatpair.yml  gauntlex.yml
docs/: DEEP_DIVE.md  DOMAIN_INTELLIGENCE.md  INTEGRATIONS.md  feature_evidence.html
docs/media/demo_video_src/: README.md  gen_panels.py  scene_00_title.html  scene_99_closing.html
docs/media/overview_src/: slide1.html  (+1 more)
docs/reports/: scenario1-quick-mode-baseline.html  scenario2-standard-hipaa.html  scenario3-github-issue-source.html  scenario4-brownfield-repo.html  scenario5-thorough-mode.html  scenario6-auto-learn-verification.html
examples/: demo_issue.md  go_api_spec.md  java_spec.md  standalone_demo.py  typescript_api_spec.md
policy-hub/: index.json
policy-hub/domains/: nist_ssdf.yaml  owasp_api_security.yaml
scripts/: release.sh  ship_gate.sh
src/combatpair/: __init__.py  cli.py  config.py
src/gauntlex/: __init__.py  cli.py  config.py
tests/: conftest.py  test_agent_base_ollama.py  test_arbiter.py  test_avf.py  test_break_context.py  test_breaker.py  test_cli_commands.py  test_config.py  test_dashboard.py  test_dia.py  test_fingerprint.py  test_forge_bot.py  test_forge_ledger.py  test_forge_network.py  test_gauntlex_engine.py  test_harness.py  test_intent_adapter.py  test_kev_client.py  test_language_profiles.py  test_leaderboard.py  test_learn_forge_ledger.py  test_live_progress.py  test_mcp_server.py  test_nvd_client.py  test_policy.py  test_policy_hub.py  test_rbac.py  test_report.py  test_sprint6.py
(+146 files in other folders)
