[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "gauntlex-ai"
version = "1.0.0"
description = "Adversarial Co-Generation Engine — concurrent Builder + Breaker agents for production-grade AI-generated code"
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "Sanjoy Ghosh", email = "sanjoy.sghosh@yahoo.co.in" }]
requires-python = ">=3.11"
keywords = ["ai", "security", "adversarial", "code-generation", "swe-bench"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security",
    "Topic :: Software Development :: Testing",
]

dependencies = [
    "click>=8.1",
    "httpx>=0.27",
    "anthropic>=0.25",
    "chromadb>=0.5",
    "pyyaml>=6.0",
    "rich>=13.7",
    "python-dotenv>=1.0",
    "fastapi>=0.111",
    "uvicorn[standard]>=0.29",
    "jinja2>=3.1",
]

[project.optional-dependencies]
ui = [
    "fastapi>=0.111",
    "uvicorn[standard]>=0.29",
    "jinja2>=3.1",
]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=4.1",
    "ruff>=0.4",
]

[project.scripts]
gauntlex = "gauntlex.cli:main"

[project.urls]
Homepage = "https://github.com/sanjoy1234/gauntlex"
Issues = "https://github.com/sanjoy1234/gauntlex/issues"

# src/ layout — PyPA recommended for enterprise packages
[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"gauntlex.data" = ["*.json"]
"gauntlex.policy.domains" = ["*.yaml"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src"]
